crates/snapshot-tests/tests/snapshots/parser__table_9_invalid.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[DuplicateKey]: the key `taste` is defined multiple times at `fruit.apple.taste`
  ┌─ table_9_invalid:6:14
  │
3 │ apple.taste.sweet = true
  │       ----- first key instance
  ·
6 │ [fruit.apple.taste]  # INVALID
  │              ^^^^^ duplicate key
